compiler/testData/cli/jvm/Xjsr305/jsr305Strict.out
compiler/testData/cli/jvm/Xjsr305/jsr305Usage.kt:2:11: error: null cannot be a value of a non-null type 'String'.
    a.foo(null)
          ^^^^
COMPILATION_ERROR
